# bighero7

./: README.md  package-lock.json
RoboticsTeam1/: index.html
RoboticsTeam1/frontend/: index.html  package-lock.json
RoboticsTeam1/frontend/src/: App.css  App.jsx  db.js
RoboticsTeam1/frontend/src/pages/: Home.jsx  Login.jsx  ScaleView.jsx  Session.jsx
RoboticsTeam1/labs/lab6/: index.html
RoboticsTeam1/labs/lab7/: interface.html
RoboticsTeam1/labs/lab7/nodes/: joint_state_republisher.py
RoboticsTeam1/usbscale/: 50-usb-scale.rules  CMakeLists.txt  Makefile  package.xml  scales.h  usbscale  usbscale.c  usbscale_node.cpp
