<?xml version="1.0"?>
<package format="3">
  <name>usbscale_node</name>
  <version>0.1.0</version>
  <description>USB scale ROS2 node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- libusb is a system library, normally found via pkg-config -->
</package>
